--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ p {
 }
 
 h1 {
-    font: 700 28px/34px 'Architects Daughter', cursive;
+    font: 700 32px/34px 'Architects Daughter', cursive;
     padding: 10px;
     text-align: center;
     color: white;
@@ -42,7 +42,7 @@ h1 {
 
 h2 {
     color: white;
-    font: 300 22px/26px 'Architects Daughter', cursive;
+    font: 300 30px/32px 'Architects Daughter', cursive;
     text-align: center;
     padding: 10px;
 }
@@ -57,6 +57,7 @@ h3 {
 h4 {
     color: white;
     font: 700 24px/26px 'Architects Daughter', cursive;
+    text-decoration: underline;
     text-align: center;
     padding: 10px;
 }
@@ -148,7 +149,7 @@ em {
     position: relative;
 }
 
-.startButton {
+#start-button {
     color: rgb(255, 115, 0);
     background-color: white;
     font: 500 22px/26px 'Architects Daughter', cursive;
@@ -158,14 +159,14 @@ em {
     border: 5px double limegreen;
 }
 
-.startButton:hover {
+#start-button:hover {
     color: rgb(255, 115, 0);
     background-color: limegreen;
     transform: scale(1.1);
     border: 5px double white;
 }
 
-.resetButton {
+#reset-button {
     color: rgb(255, 115, 0);
     background-color: white;
     font: 500 22px/26px 'Architects Daughter', cursive;
@@ -175,7 +176,7 @@ em {
     border: 5px double limegreen;
 }
 
-.resetButton:hover {
+#reset-button:hover {
     color: rgb(255, 115, 0);
     background-color: limegreen;
     transform: scale(1.1);
